# ESP32-DAPLink

./: CLAUDE.md
components/usbipd/: CMakeLists.txt
components/usbipd/platform/: espidf_os.c  espidf_transport.c
main/: CMakeLists.txt  idf_component.yml
